--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                             <a href="/" id="home" class="navbar-item">
                                 Home
                             </a>
-                            <a href="/repo/" id="repo" class="navbar-item">
+                            <a href="/repo" id="repo" class="navbar-item">
                                 Repo
                             </a>
                             <a href="/contact.html" id="contact" class="navbar-item">
@@ -93,7 +93,7 @@
                             </div>
                         </div>
                         <div class="card-content">
-                            <a href="https://www.reddit.com/user/cj81499/">/u/cj81499</a>
+                            <a href="https://www.reddit.com/user/cj81499">/u/cj81499</a>
                         </div>
                     </div>
                 </div>
@@ -121,7 +121,7 @@
                             </div>
                         </div>
                         <div class="card-content">
-                            <a href="https://github.com/cj81499/cj81499.github.io">cj81499</a>
+                            <a href="https://github.com/cj81499">cj81499</a>
                         </div>
                     </div>
                 </div>
