--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     <script src="/assets/js/navbars.js"></script>
 
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/resources/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/resources/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/resources/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/resources/favicon/site.webmanifest">
-    <link rel="mask-icon" href="/resources/favicon/safari-pinned-tab.svg" color="#3498db">
-    <link rel="shortcut icon" href="/resources/favicon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/assets/favicon/site.webmanifest">
+    <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#3498db">
+    <link rel="shortcut icon" href="/assets/favicon/favicon.ico">
     <meta name="apple-mobile-web-app-title" content="cj's Website">
     <meta name="application-name" content="cj's Website">
     <meta name="msapplication-TileColor" content="#3498db">
-    <meta name="msapplication-config" content="/resources/favicon/browserconfig.xml">
+    <meta name="msapplication-config" content="/assets/favicon/browserconfig.xml">
     <meta name="theme-color" content="#3498db">
 </head>
 
@@ -34,7 +34,7 @@
                 <div class="container">
                     <div class="navbar-brand">
                         <a href="/" class="navbar-item">
-                            <img src="/resources/logo/32.png" alt="Logo">
+                            <img src="/assets/logo/32.png" alt="Logo">
                         </a>
                         <span tabindex="0" class="navbar-burger" data-target="mainNav">
                             <span></span>
@@ -106,7 +106,7 @@
                         </div>
                         <div class="card-content">
                             <div class="card-image">
-                                <img src="/resources/logo/1024.png" alt="cjLogo">
+                                <img src="/assets/logo/1024.png" alt="cjLogo">
                             </div>
                             this is a placeholder
                         </div>
