--- a/repo/depictions/com.cj81499.BarelyRounded/index.html
+++ b/repo/depictions/com.cj81499.BarelyRounded/index.html
@@ -19,7 +19,7 @@
           <a href="https://www.reddit.com/r/iOSthemes/comments/3nrehu/question_can_somebody_make_this_android_type_icon/" target="new">here</a>.</p>
       </div>
       <a class="black-text" href="./screenshots.html">
-        <img class="icon" src="/resources/icons/screenshots.png" width="58" height="58">
+        <img class="icon" src="/repo/assets/icons/screenshots.png" width="58" height="58">
         <div>
           <div>
             <p>Screenshots</p>
@@ -30,7 +30,7 @@
     <div class="section-label">Changelog</div>
     <div class="fieldset">
       <a class="black-text" href="./changelog.html">
-        <img class="icon" src="/resources/icons/changelog.png" width="58" height="58">
+        <img class="icon" src="/repo/assets/icons/changelog.png" width="58" height="58">
         <div>
           <div>
             <p>Changelog</p>
@@ -41,7 +41,7 @@
     <div class="section-label">Other</div>
     <div class="fieldset">
       <a class="black-text" href="/repo/help.html">
-        <img class="icon" src="/resources/icons/help.png" width="58" height="58">
+        <img class="icon" src="/repo/assets/icons/help.png" width="58" height="58">
         <div>
           <div>
             <p>Help</p>
@@ -49,7 +49,7 @@
         </div>
       </a>
       <a class="black-text" href="/repo/donate.html">
-        <img class="icon" src="/resources/icons/donate.png" width="58" height="58">
+        <img class="icon" src="/repo/assets/icons/donate.png" width="58" height="58">
         <div>
           <div>
             <p>Donate</p>
@@ -57,7 +57,7 @@
         </div>
       </a>
       <a class="black-text" href="/contact.html">
-        <img class="icon" src="/resources/icons/contact.png" width="58" height="58">
+        <img class="icon" src="/repo/assets/icons/contact.png" width="58" height="58">
         <div>
           <div>
             <p>Contact Me</p>
