--- a/repo/depictions/com.cj81499.PebbleStatus.Time/index.html
+++ b/repo/depictions/com.cj81499.PebbleStatus.Time/index.html
@@ -22,7 +22,7 @@
           <a href="cydia://package/com.cj81499.PebbleStatus.OG" target="_new">Pebble OG PebbleStatus Theme</a>.</p>
       </div>
       <a class="black-text" href="./screenshots.html">
-        <img class="icon" src="/resources/icons/screenshots.png" width="58" height="58">
+        <img class="icon" src="/repo/assets/icons/screenshots.png" width="58" height="58">
         <div>
           <div>
             <p>Screenshots</p>
@@ -33,7 +33,7 @@
     <div class="section-label">Changelog</div>
     <div class="fieldset">
       <a class="black-text" href="./changelog.html">
-        <img class="icon" src="/resources/icons/changelog.png" width="58" height="58">
+        <img class="icon" src="/repo/assets/icons/changelog.png" width="58" height="58">
         <div>
           <div>
             <p>Changelog</p>
@@ -44,7 +44,7 @@
     <div class="section-label">Other</div>
     <div class="fieldset">
       <a class="black-text" href="/repo/help.html">
-        <img class="icon" src="/resources/icons/help.png" width="58" height="58">
+        <img class="icon" src="/repo/assets/icons/help.png" width="58" height="58">
         <div>
           <div>
             <p>Help</p>
@@ -52,7 +52,7 @@
         </div>
       </a>
       <a class="black-text" href="/repo/donate.html">
-        <img class="icon" src="/resources/icons/donate.png" width="58" height="58">
+        <img class="icon" src="/repo/assets/icons/donate.png" width="58" height="58">
         <div>
           <div>
             <p>Donate</p>
@@ -60,7 +60,7 @@
         </div>
       </a>
       <a class="black-text" href="/contact.html">
-        <img class="icon" src="/resources/icons/contact.png" width="58" height="58">
+        <img class="icon" src="/repo/assets/icons/contact.png" width="58" height="58">
         <div>
           <div>
             <p>Contact Me</p>
