--- a/repo/depictions/com.cj81499.cjOdin/index.html
+++ b/repo/depictions/com.cj81499.cjOdin/index.html
@@ -18,7 +18,7 @@
         <p>A few custom Odin icons made by cj81499.</p>
       </div>
       <a class="black-text" href="./screenshots.html">
-        <img class="icon" src="/resources/icons/screenshots.png" width="58" height="58">
+        <img class="icon" src="/repo/assets/icons/screenshots.png" width="58" height="58">
         <div>
           <div>
             <p>Screenshots</p>
@@ -29,7 +29,7 @@
     <div class="section-label">Changelog</div>
     <div class="fieldset">
       <a class="black-text" href="./changelog.html">
-        <img class="icon" src="/resources/icons/changelog.png" width="58" height="58">
+        <img class="icon" src="/repo/assets/icons/changelog.png" width="58" height="58">
         <div>
           <div>
             <p>Changelog</p>
@@ -40,7 +40,7 @@
     <div class="section-label">Other</div>
     <div class="fieldset">
       <a class="black-text" href="/repo/help.html">
-        <img class="icon" src="/resources/icons/help.png" width="58" height="58">
+        <img class="icon" src="/repo/assets/icons/help.png" width="58" height="58">
         <div>
           <div>
             <p>Help</p>
@@ -48,7 +48,7 @@
         </div>
       </a>
       <a class="black-text" href="/repo/donate.html">
-        <img class="icon" src="/resources/icons/donate.png" width="58" height="58">
+        <img class="icon" src="/repo/assets/icons/donate.png" width="58" height="58">
         <div>
           <div>
             <p>Donate</p>
@@ -56,7 +56,7 @@
         </div>
       </a>
       <a class="black-text" href="/contact.html">
-        <img class="icon" src="/resources/icons/contact.png" width="58" height="58">
+        <img class="icon" src="/repo/assets/icons/contact.png" width="58" height="58">
         <div>
           <div>
             <p>Contact Me</p>
