--- a/repo/depictions/com.highdetalio.SpaceBlueBerry/index.html
+++ b/repo/depictions/com.highdetalio.SpaceBlueBerry/index.html
@@ -24,7 +24,7 @@
         <p>Alternate icons are located at /Library/Themes/SpaceBlueBerry - iOS 8.theme/ALTs</p>
       </div>
       <a class="black-text" href="./screenshots.html">
-        <img class="icon" src="/resources/icons/screenshots.png" width="58" height="58">
+        <img class="icon" src="/repo/assets/icons/screenshots.png" width="58" height="58">
         <div>
           <div>
             <p>Screenshots</p>
@@ -35,7 +35,7 @@
     <div class="section-label">Changelog</div>
     <div class="fieldset">
       <a class="black-text" href="./changelog.html">
-        <img class="icon" src="/resources/icons/changelog.png" width="58" height="58">
+        <img class="icon" src="/repo/assets/icons/changelog.png" width="58" height="58">
         <div>
           <div>
             <p>Changelog</p>
@@ -46,7 +46,7 @@
     <div class="section-label">Other</div>
     <div class="fieldset">
       <a class="black-text" href="/repo/help.html">
-        <img class="icon" src="/resources/icons/help.png" width="58" height="58">
+        <img class="icon" src="/repo/assets/icons/help.png" width="58" height="58">
         <div>
           <div>
             <p>Help</p>
@@ -54,7 +54,7 @@
         </div>
       </a>
       <a class="black-text" href="/repo/donate.html">
-        <img class="icon" src="/resources/icons/donate.png" width="58" height="58">
+        <img class="icon" src="/repo/assets/icons/donate.png" width="58" height="58">
         <div>
           <div>
             <p>Donate</p>
@@ -62,7 +62,7 @@
         </div>
       </a>
       <a class="black-text" href="/contact.html">
-        <img class="icon" src="/resources/icons/contact.png" width="58" height="58">
+        <img class="icon" src="/repo/assets/icons/contact.png" width="58" height="58">
         <div>
           <div>
             <p>Contact Me</p>
