--- a/repo/depictions/com.jacopoiuytr.Mandolino/index.html
+++ b/repo/depictions/com.jacopoiuytr.Mandolino/index.html
@@ -25,7 +25,7 @@
         </p>
       </div>
       <a class="black-text" href="./screenshots.html">
-        <img class="icon" src="/resources/icons/screenshots.png" width="58" height="58">
+        <img class="icon" src="/repo/assets/icons/screenshots.png" width="58" height="58">
         <div>
           <div>
             <p>Screenshots</p>
@@ -36,7 +36,7 @@
     <div class="section-label">Changelog</div>
     <div class="fieldset">
       <a class="black-text" href="./changelog.html">
-        <img class="icon" src="/resources/icons/changelog.png" width="58" height="58">
+        <img class="icon" src="/repo/assets/icons/changelog.png" width="58" height="58">
         <div>
           <div>
             <p>Changelog</p>
@@ -47,7 +47,7 @@
     <div class="section-label">Other</div>
     <div class="fieldset">
       <a class="black-text" href="/repo/help.html">
-        <img class="icon" src="/resources/icons/help.png" width="58" height="58">
+        <img class="icon" src="/repo/assets/icons/help.png" width="58" height="58">
         <div>
           <div>
             <p>Help</p>
@@ -55,7 +55,7 @@
         </div>
       </a>
       <a class="black-text" href="/repo/donate.html">
-        <img class="icon" src="/resources/icons/donate.png" width="58" height="58">
+        <img class="icon" src="/repo/assets/icons/donate.png" width="58" height="58">
         <div>
           <div>
             <p>Donate</p>
@@ -63,7 +63,7 @@
         </div>
       </a>
       <a class="black-text" href="/contact.html">
-        <img class="icon" src="/resources/icons/contact.png" width="58" height="58">
+        <img class="icon" src="/repo/assets/icons/contact.png" width="58" height="58">
         <div>
           <div>
             <p>Contact Me</p>
