--- a/repo/index.html
+++ b/repo/index.html
@@ -11,16 +11,16 @@
     <link rel="stylesheet" type="text/css" href="/repo/css/style.css">
 
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/resources/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/resources/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/resources/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/resources/favicon/site.webmanifest">
-    <link rel="mask-icon" href="/resources/favicon/safari-pinned-tab.svg" color="#3498db">
-    <link rel="shortcut icon" href="/resources/favicon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/assets/favicon/site.webmanifest">
+    <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#3498db">
+    <link rel="shortcut icon" href="/assets/favicon/favicon.ico">
     <meta name="apple-mobile-web-app-title" content="cj's Website">
     <meta name="application-name" content="cj's Website">
     <meta name="msapplication-TileColor" content="#3498db">
-    <meta name="msapplication-config" content="/resources/favicon/browserconfig.xml">
+    <meta name="msapplication-config" content="/assets/favicon/browserconfig.xml">
     <meta name="theme-color" content="#3498db">
 </head>
 
@@ -32,7 +32,7 @@
         <div class="section-label">Do Things</div>
         <div class="fieldset">
             <a class="black-text" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://cj81499.github.io/repo/">
-                <img class="icon" src="/resources/icons/cydia.png">
+                <img class="icon" src="/repo/assets/icons/cydia.png">
                 <div>
                     <div>
                         <p>Add to Cydia</p>
@@ -40,7 +40,7 @@
                 </div>
             </a>
             <a class="black-text">
-                <img class="icon" src="/resources/icons/url.png">
+                <img class="icon" src="/repo/assets/icons/url.png">
                 <div>
                     <div id="repo-url">
                         <p>URL</p>
